--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>PORTFOLIO</title>
   <link rel="stylesheet" href="STYLE.CSS">
   <style>
+    body{
+      background-color:bisque;
+    }
     table,
     th,
     td {
